--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-    "tabWidth": 4,
-    "useTabs": true,
-    "printWidth": 120,
-    "semi": false
+	"tabWidth": 4,
+	"useTabs": true,
+	"printWidth": 120,
+	"semi": false,
+	"singleQuote": true
 }
